flash_driver: move driver code to flash_driver/

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,11 +1,17 @@
 cmake_minimum_required(VERSION 3.12)
-project(flash)
+project(flash_project)
 
 add_library(
-    flash_module
+    flash
     flash/flash.h
     flash/flash.c
     )
 
+add_library(
+    flash_driver
+    flash/flash_driver.h
+    flash/flash_driver.c
+    )
+
 add_executable(${PROJECT_NAME} "flash_example.c")
-target_link_libraries(${PROJECT_NAME} PRIVATE flash_module)
+target_link_libraries(${PROJECT_NAME} PRIVATE flash flash_driver)
